Fix : 최상단으로 오도록 z-index: 10, background-color: white 추가

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -2,6 +2,7 @@
 
 .nav {
   margin-bottom: 90px;
+  background-color: white;
   z-index: 10;
 
   .menuList {
